# LotUs

./: .dockerignore  .env.example  .env.minio.example  .gitignore  Dockerfile  README.md  docker-compose.minio.yml  docker-compose.yml  pyarch.toml  pyproject.toml
.github/workflows/: ci.yml
alembic/versions/: 659fd2efad1b_user_balance_item.py  79513486657f_add_balance_table.py  a64c9c7f9a21_add_item_images_storage.py  b7f8c2d9e4a1_add_auctions_lots_bids.py  c6d4f3a8b9e2_add_lot_sale_timestamps.py  ce04bf08fa05_remove_unique_refresh_session_user_index.py  d2c4e6f8a9b1_harden_core_domain_invariants.py  e5b8d2a7c9f4_add_idempotency_records.py
app/: celery_app.py  main.py
app/api/: openapi.py
app/auth/: dependencies.py  routes.py  schemas.py  service.py
app/cache/: auction.py  base.py  dependencies.py
app/core/: config.py  errors.py  exception_handlers.py  logging.py  middleware.py
app/db/: session.py
app/models/: __init__.py  auction.py  balance.py  bid.py  idempotency_record.py  item.py  item_image.py  lot.py  refresh_session.py  user.py
app/rate_limit/: dependencies.py  policies.py  service.py
app/redis/: client.py
app/repositories/: auction.py  balance.py  idempotency.py  item.py  item_image.py  user.py
app/schemas/: auction.py  balance.py  (+1 more)
docs/: ARCHITECTURE.md  MINIO.md  RBAC.md
scripts/: docker-entrypoint.sh
tests/: conftest.py  fakes.py  helpers.py  test_auction_cache.py  test_auction_http.py  test_auction_pubsub.py  test_auction_websocket.py  test_auth_http.py  test_celery_tasks.py  test_core_invariants.py  test_items_balance_http.py
(+23 files in other folders)
