[project]
name = "lotus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "bcrypt>=5.0.0",
    "boto3>=1.43.46",
    "celery>=5.6.3",
    "cryptography>=49.0.0",
    "fastapi>=0.139.0",
    "pillow>=12.3.0",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "pydantic[email]>=2.13.4",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "redis>=6.0.0",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "httpx2>=2.5.0",
    "mypy>=2.2.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
